--- a/boostlook.css
+++ b/boostlook.css
@@ -1538,11 +1538,13 @@ body > .chapter,
 
 /* Spirit Navigation */
 .boostlook:not(:has(.doc)) .spirit-nav {
-  position: absolute;
+  position: relative;
+  float: right;
   top: 0.2rem;
-  right: calc(((100% - 75rem) / 2));
+  right: 28px;
   text-align: right;
   margin: 0.75rem;
+  padding-left: 10px;
   max-width: 80rem;
   display: flex;
 }
@@ -1573,6 +1575,11 @@ body > .chapter,
 .dark .boostlook:not(:has(.doc)) .spirit-nav img {
   -webkit-filter: invert(100%);
   filter: invert(100%);
+}
+
+/* hide footer spirit nav since it wasn't visible before */
+.boostlook:not(:has(.doc)) div:nth-of-type(4).spirit-nav {
+  display: none !important;
 }
 
 /* Spirit Navigation Icons */
