--- a/boostlook.css
+++ b/boostlook.css
@@ -1056,6 +1056,12 @@ html:has(#docsiframe)::-webkit-scrollbar {
 }
 
 /* Responsive Design */
+@media screen and (min-width: 1024px) {
+  html {
+    font-size: .83333rem;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .boostlook #toggle-toc {
     visibility: visible;
